--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = "My Application"
+rootProject.name = "uvcApp"
 include ':app'
 include ':libuvccamera'
 include ':usbCameraCommon'
